Fix bug on mobile Restore header

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,16 @@ html.menu-active {
 	overflow: hidden;
 }
 
+html.menu-active > body > header {
+	top: 0;
+	position: fixed;
+	width: 100%;
+}
+
+html.menu-active > body {
+	padding-top: 58px;
+}
+
 header {
 	position: relative;
 	border-bottom: 1px solid #555;
@@ -66,6 +76,7 @@ nav#mobile-nav {
 	/*transform: translateX(100%);*/
 	width: 100%;
 	height: 100%;
+	border-top: 1px solid #555;
 	left: 100%;
 	transition: all 0.5s;
 }
